[package]
name = "downloads-khinsider-com-dl"
version = "0.1.0"
edition = "2024"

[profile.release]
lto = true
strip = "symbols"

[lib]
path = "src/lib/lib.rs"

[[bin]]
name = "downloads-khinsider-com-dl-cli"
path = "src/bin/cli/main.rs"

[dependencies]
anyhow = "1.0.102"
clap = { version = "4.6.0", features = ["derive"] }
reqwest = { version = "0.13.2" }
scraper = "0.25.0"
tokio = { version = "1.50.0", features = ["rt", "rt-multi-thread", "fs", "macros"] }
